--- a/css/styles.css
+++ b/css/styles.css
@@ -46,31 +46,38 @@ h1 {
 }
 
 .button {
+    display: inline-block;
     background-color: magenta;
     border-radius: 8px;
     border: 2px solid;
     border-color: blue;
     color: yellow;
-    padding: 10px;
+    /* padding-top: 10px;
+    padding-left: 4px;
+    padding-right: 4px; */
     width: 100px;
     height: 50px;
+    max-height: 52px;
     cursor: pointer;
 }
 
 .button-shadow {
     background-color: darkgoldenrod;
-    width: 100px;
+    width: 105px;
     height: 60px;
     border-radius: 8px;
     margin: 10px;
 }
 
 .button:hover {
-    height: 52px;;
+    height: 52px;
     background-color: lightpink;
     color: red;
     transition: all 0.5s ease-in-out;
-    
+}
+
+.button-text {
+    text-align: center;
 }
 
 .center-container {
