--- a/css/styles.css
+++ b/css/styles.css
@@ -46,34 +46,30 @@ h1 {
 }
 
 .button {
+    position: relative;
     display: inline-block;
     background-color: magenta;
     border-radius: 8px;
     border: 2px solid;
     border-color: blue;
     color: yellow;
-    /* padding-top: 10px;
-    padding-left: 4px;
-    padding-right: 4px; */
     width: 100px;
     height: 50px;
     max-height: 52px;
     cursor: pointer;
-}
-
-.button-shadow {
-    background-color: darkgoldenrod;
-    width: 105px;
-    height: 60px;
-    border-radius: 8px;
-    margin: 10px;
+    transition: transform 0.1s ease;
+    --rotateX: 0deg;
+    --rotateY: 0deg;
+    transform: perspective(1000px) rotateX(var(--rotateX)) rotateY(var(--rotateY));
+    box-shadow: 0px 5px darkgoldenrod;
+    margin-right: 10px;
 }
 
 .button:hover {
-    height: 52px;
     background-color: lightpink;
     color: red;
     transition: all 0.5s ease-in-out;
+    transform: perspective(1000px) translateY(1px) rotateX(var(--rotateX)) rotateY(var(--rotateY));
 }
 
 .button-text {
@@ -95,4 +91,19 @@ h1 {
     background-color: #ffa9b8;
     border-radius: 8px;
     cursor: pointer;
+}
+
+.main-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.main-content {
+    height: 200px;
+    background-color: white;
+    overflow: auto;
+    padding: 10px;
+    border-radius: 8px;    
 }
