--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,8 @@ h1 {
 .main-content {
     height: 100%;
     background-color: white;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 10px;
     border-radius: 8px;
 }
@@ -133,4 +134,25 @@ h1 {
 
 .float-right-picture {
     float: right;
+    animation: animateToLeft 1.5s ease;
+    -webkit-animations: animateToLeft 1.5s ease;
 };
+
+@keyframes animateToLeft {
+    from { transform: translateX(100%); }
+    to { transform: translateX(0); }
+}
+
+@-webkit-keyframes animateToLeft {
+    from { transform: translateX(100%); }
+    to { transform: translateX(0); }
+}
+
+.fade {
+    animation: fade 2.5s ease;
+}
+
+@keyframes fade {
+    from { opacity: 0%; }
+    to { opacity: 100% }
+}
