--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,14 @@ h1 {
 }
 
 @media (max-width: 600px) {
+
+    .flexbox {
+        flex-direction: column;
+        /* ⬅️ image goes above, text below */
+        align-items: center;
+        /* optional: center content */
+    }
+
     .heading {
         flex-direction: column;
         align-items: center;
@@ -333,12 +341,14 @@ h1 {
     margin-top: 50px;
 }
 
-.box {
-    display: block;
-}
-
 .flexbox {
     display: flex;
+}
+
+.company-picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* optional */
 }
 
 .project-year {
