--- a/css/styles.css
+++ b/css/styles.css
@@ -354,3 +354,9 @@ h1 {
 .project-year {
     margin: 0;
 }
+
+.deathless-pictures {
+    display: grid;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: 140px 140px;
+}
