--- a/css/styles.css
+++ b/css/styles.css
@@ -158,14 +158,18 @@ h1 {
         align-self: center;
     }
 
-    .description {
-        order: 2;
-    }
-
     .float-right-picture {
-        order: 1;
+        order: 0;
         animation: animateDown 1.5s ease;
         -webkit-animations: animateDown 1.5s ease;
+    }
+
+    .description {
+        order: 1;
+    }
+
+    .other-works-section {
+        order: 2;
     }
 
     .main-content {
@@ -179,11 +183,6 @@ h1 {
 
     .floatToRight {
         padding-top: 20px;
-    }
-
-    .projects-section {
-        margin-top: 100px;
-        display: grid;
     }
 
 }
@@ -212,14 +211,38 @@ h1 {
         max-width: 500px;
         max-height: 280px;
     }
+}
 
+@media (max-width: 1017px) {
     .projects-section {
         margin-top: 100px;
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto;
+    }
+
+    .other-works-grid {
+        order: 3;
+        display: grid;
+        grid-template-columns: auto;
+        justify-content: center;
+        gap: 12px;
+    }
+}
+
+@media (min-width: 1018px) {
+    .projects-section {
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
         gap: 50px;
     }
 
+    .other-works-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 12px;
+        justify-content: center;
+    }
 }
 
 .floatToRight {
@@ -348,7 +371,7 @@ h1 {
 .company-picture {
     display: flex;
     flex-direction: column;
-    align-items: center; /* optional */
+    align-items: center;
 }
 
 .project-year {
@@ -360,3 +383,22 @@ h1 {
     grid-template-columns: 250px 250px;
     grid-template-rows: 140px 140px;
 }
+
+.other-works-section {
+    flex-basis: 100%;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.card {
+    border: 1px solid gray;
+    height: 400px;
+    overflow: auto;
+    max-inline-size: 400px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    border-radius: 2px;
+}
+
