--- a/css/styles.css
+++ b/css/styles.css
@@ -397,15 +397,17 @@ h1 {
 }
 
 .card {
+    position: relative;
     border: 1px solid lightgray;
-    overflow: auto;
+    overflow: hidden;
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
     border-radius: 2px;
     max-width: 600px;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-info {
@@ -415,4 +417,17 @@ h1 {
 
 .card-image {
     width: 100%;
+}
+
+.card.expanded {
+    height: 100%;
+}
+
+.read-more-btn {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    z-index: 10;
+    transform: translateX(-50%);
+
 }
