--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,12 @@ h1 {
 
 @media (max-width: 600px) {
 
+    .projects-section {
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: 300px;
+    }
+
     .flexbox {
         flex-direction: column;
         /* ⬅️ image goes above, text below */
@@ -188,6 +194,12 @@ h1 {
 
 @media (min-width: 601px) {
 
+    .projects-section {
+        margin-top: 100px;
+        display: grid;
+        grid-template-columns: auto;
+    }
+
     .description,
     .float-right-picture {
         flex: 1;
@@ -213,11 +225,6 @@ h1 {
 }
 
 @media (max-width: 1017px) {
-    .projects-section {
-        margin-top: 100px;
-        display: grid;
-        grid-template-columns: auto;
-    }
 
     .other-works-grid {
         order: 3;
@@ -230,7 +237,6 @@ h1 {
 
 @media (min-width: 1018px) {
     .projects-section {
-        margin-top: 100px;
         display: grid;
         grid-template-columns: repeat(2, auto);
         gap: 50px;
