--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,11 @@ h1 {
     margin-right: 12px;
 }
 
+.styled-font {
+    font-family: 'Georgia';
+    color: gray;
+}
+
 #featured-in {
     margin-top: 28px;
 }
