--- a/css/styles.css
+++ b/css/styles.css
@@ -1,465 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
-
-body {
-    background-color: #ffc0cb;
-}
-
-
-
-.typewriter {
-    display: inline-block;
-    overflow: hidden;
-    /* Ensures the contest is not revealed until the animation */
-    border-right: .20em solid orange;
-    /* the typewriter cursor */
-    white-space: nowrap;
-    /* Keeps the content on a single line*/
-    margin: 0;
-    /* Gives the scrolling effect as the typing happens */
-    letter-spacing: .15em;
-    animation:
-        typing 2.5s steps(20, end),
-        blink-caret .5s step-end infinite;
-
-}
-
-@keyframes typing {
-    from {
-        width: 0
-    }
-
-    to {
-        width: 8ch
-    }
-}
-
-@keyframes blink-caret {
-
-    from,
-    to {
-        border-color: transparent
-    }
-
-    50% {
-        border-color: orange;
-    }
-}
-
-h1 {
-    font-family: 'Sacramento';
-    margin: 0;
-
-}
-
-.logo {
-    height: 30%;
-    width: 30%;
-    min-width: 200px;
-}
-
-.image-container {
-    display: flex;
-}
-
-.button {
-    position: relative;
-    display: inline-block;
-    background-color: magenta;
-    border-radius: 8px;
-    border: 2px solid;
-    border-color: blue;
-    color: yellow;
-    width: 100px;
-    height: 50px;
-    max-height: 52px;
-    cursor: pointer;
-    transition: transform 0.1s ease;
-    --rotateX: 0deg;
-    --rotateY: 0deg;
-    transform: perspective(1000px) rotateX(var(--rotateX)) rotateY(var(--rotateY));
-    box-shadow: 0px 5px darkgoldenrod;
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
-
-.button:hover {
-    background-color: lightpink;
-    color: red;
-    transition: all 0.5s ease-in-out;
-    transform: perspective(1000px) translateY(1px) rotateX(var(--rotateX)) rotateY(var(--rotateY));
-}
-
-.button-text {
-    text-align: center;
-}
-
-.center-container {
-    margin-top: 28px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.footer-icon {
-    margin-right: 4px;
-}
-
-.footer-icon:hover {
-    background-color: #ffa9b8;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.main-container {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.main-content {
-    display: flex;
-    height: 100%;
-    background-color: white;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-radius: 8px;
-    padding: 28px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.home-icon {
-    width: 50px;
-    height: auto;
-}
-
-.heading {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-@media (max-width: 600px) {
-
-    .deathless-pictures {
-        display: grid;
-        grid-template-columns: repeat(2, 150px);
-        grid-template-rows: repeat(2, 84px);
-    }
-
-    .projects-section {
-        margin-top: 100px;
-        display: grid;
-        grid-template-columns: 300px;
-    }
-
-    .flexbox {
-        flex-direction: column;
-        /* ⬅️ image goes above, text below */
-        align-items: center;
-        /* optional: center content */
-    }
-
-    .heading {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .home-icon {
-        align-self: center;
-    }
-
-    .float-right-picture {
-        order: 0;
-        animation: animateDown 1.5s ease;
-        -webkit-animations: animateDown 1.5s ease;
-    }
-
-    .description {
-        order: 1;
-    }
-
-    .other-works-section {
-        order: 2;
-    }
-
-    .main-content {
-        justify-content: center;
-    }
-
-    .article {
-        max-width: 300px;
-    }
-
-
-    .floatToRight {
-        padding-top: 20px;
-    }
-}
-
-@media (min-width: 601px) {
-
-    .deathless-pictures {
-        display: grid;
-        grid-template-columns: 250px 250px;
-        grid-template-rows: 140px 140px;
-    }
-
-    .projects-section {
-        margin-top: 100px;
-        display: grid;
-        grid-template-columns: auto;
-    }
-
-    .description,
-    .float-right-picture {
-        flex: 1;
-    }
-
-    .description {
-        order: 0;
-    }
-
-    .float-right-picture {
-        order: 1;
-    }
-
-    .float-right-picture {
-        animation: animateToLeft 1.5s ease;
-        -webkit-animations: animateToLeft 1.5s ease;
-    }
-
-    .article {
-        max-width: 500px;
-    }
-}
-
-@media (max-width: 1017px) {
-
-    .other-works-grid {
-        order: 3;
-        display: grid;
-        grid-template-columns: auto;
-        justify-content: center;
-        gap: 12px;
-    }
-}
-
-@media (min-width: 1018px) {
-    .projects-section {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        gap: 50px;
-    }
-
-    .other-works-grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 12px;
-        justify-content: center;
-    }
-
-    .card {
-        max-inline-size: 400px;
-        height: 400px;
-    }
-}
-
-.floatToRight {
-    animation: animateToRight 2.5s ease;
-    -webkit-animations: animateToRight 2.5s ease;
-}
-
-@keyframes animateToRight {
-    from {
-        transform: translateX(-5%);
-    }
-
-    to {
-        transform: translateX(0);
-    }
-}
-
-@-webkit-keyframes animateToRight {
-    from {
-        transform: translateX(-5%);
-    }
-
-    to {
-        transform: translateX(0);
-    }
-}
-
-@keyframes animateToLeft {
-    from {
-        transform: translateX(100%);
-    }
-
-    to {
-        transform: translateX(0);
-    }
-}
-
-@-webkit-keyframes animateToLeft {
-    from {
-        transform: translateX(100%);
-    }
-
-    to {
-        transform: translateX(0);
-    }
-}
-
-@keyframes animateDown {
-    from {
-        transform: translateY(-100px);
-    }
-
-    to {
-        transform: translateY(0);
-    }
-}
-
-@-webkit-keyframes animateDown {
-    from {
-        transform: translateY(-100px);
-    }
-
-    to {
-        transform: translateY(0);
-    }
-}
-
-.fade {
-    animation: fade 2.5s ease;
-}
-
-@keyframes fade {
-    from {
-        opacity: 0%;
-    }
-
-    to {
-        opacity: 100%
-    }
-}
-
-.description {
-    font-family: 'Georgia';
-    color: gray;
-    margin-right: 12px;
-}
-
-.styled-font {
-    font-family: 'Georgia';
-    color: gray;
-}
-
-#featured-in {
-    margin-top: 28px;
-}
-
-.articles {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, max-content));
-    grid-column-gap: 40px;
-    justify-content: center;
-    max-width: 900px;
-    margin-inline: auto;
-}
-
-
-.article {
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-    background-color: white;
-    padding: 12px;
-    text-align: center;
-    width: 100%;
-    margin-top: 28px;
-    min-height: 450px;
-    border: 2px solid transparent;
-}
-
-.article> :nth-child(2) {
-    padding: 24px;
-}
-
-.article:hover {
-    border: 2px solid gold;
-}
-
-.footer {
-    margin-top: 50px;
-}
-
-.flexbox {
-    display: flex;
-}
-
-.company-picture {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.project-year {
-    margin: 0;
-}
-
-
-
-.other-works-section {
-    flex-basis: 100%;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-.card {
-    position: relative;
-    border: 1px solid lightgray;
-    overflow: hidden;
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-    border-radius: 2px;
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-    transition: height 0.1s ease;
-}
-
-.card-info {
-    color: gray;
-    margin: 16px;
-    overflow: hidden;
-}
-
-.card-image {
-    width: 100%;
-    height: auto;
-}
-
-.card.expanded {
-    height: 100%;
-    transition: height 0.1s ease;
-}
-
-.read-more-btn {
-    position: absolute;
-    bottom: 1rem;
-    left: 50%;
-    z-index: 10;
-    transform: translateX(-50%);
-    border: none;
-    background-color: none;
-    font-family:'Times New Roman';
-    color: blue;
-    font-size: 16px;
-    cursor: pointer;
-}
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');body{background-color:#ffc0cb;}.typewriter{display:inline-block;overflow:hidden;border-right:.20em solid orange;white-space:nowrap;margin:0;letter-spacing:.15em;animation:typing 2.5s steps(20,end),blink-caret .5s step-end infinite;}@keyframes typing{from{width:0}to{width:8ch}}@keyframes blink-caret{from,to{border-color:transparent}50%{border-color:orange}}h1{font-family:'Sacramento';margin:0;}.logo{height:30%;width:30%;min-width:200px;}.image-container{display:flex;}.button{position:relative;display:inline-block;background-color:magenta;border-radius:8px;border:2px solid;border-color:blue;color:yellow;width:100px;height:50px;max-height:52px;cursor:pointer;transition:transform .1s ease;--rotateX:0deg;--rotateY:0deg;transform:perspective(1000px) rotateX(var(--rotateX)) rotateY(var(--rotateY));box-shadow:0 5px darkgoldenrod;margin-right:10px;margin-bottom:10px;}.button:hover{background-color:lightpink;color:red;transition:all .5s ease-in-out;transform:perspective(1000px) translateY(1px) rotateX(var(--rotateX)) rotateY(var(--rotateY));}.button-text{text-align:center;}.center-container{margin-top:28px;display:flex;justify-content:center;flex-wrap:wrap;}.footer-icon{margin-right:4px;}.footer-icon:hover{background-color:#ffa9b8;border-radius:8px;cursor:pointer;}.main-container{padding-top:100px;padding-bottom:100px;padding-left:10px;padding-right:10px;}.main-content{display:flex;height:100%;background-color:white;overflow-y:auto;overflow-x:hidden;border-radius:8px;padding:28px;justify-content:space-between;flex-wrap:wrap;}.home-icon{width:50px;height:auto;}.heading{display:flex;justify-content:space-between;flex-wrap:wrap;}@media (max-width:600px){.deathless-pictures{display:grid;grid-template-columns:repeat(2,150px);grid-template-rows:repeat(2,84px)}.projects-section{margin-top:100px;display:grid;grid-template-columns:300px}.flexbox{flex-direction:column;align-items:center}.heading{flex-direction:column;align-items:center}.home-icon{align-self:center}.float-right-picture{order:0;animation:animateDown 1.5s ease;-webkit-animations:animateDown 1.5s ease}.description{order:1}.other-works-section{order:2}.main-content{justify-content:center}.article{max-width:300px}.floatToRight{padding-top:20px}}@media (min-width:601px){.deathless-pictures{display:grid;grid-template-columns:250px 250px;grid-template-rows:140px 140px}.projects-section{margin-top:100px;display:grid;grid-template-columns:auto}.description,.float-right-picture{flex:1}.description{order:0}.float-right-picture{order:1}.float-right-picture{animation:animateToLeft 1.5s ease;-webkit-animations:animateToLeft 1.5s ease}.article{max-width:500px}}@media (max-width:1017px){.other-works-grid{order:3;display:grid;grid-template-columns:auto;justify-content:center;gap:12px}}@media (min-width:1018px){.projects-section{display:grid;grid-template-columns:repeat(2,auto);gap:50px}.other-works-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;justify-content:center}.card{max-inline-size:400px;height:400px}}.floatToRight{animation:animateToRight 2.5s ease;-webkit-animations:animateToRight 2.5s ease;}@keyframes animateToRight{from{transform:translateX(-5%)}to{transform:translateX(0)}}@-webkit-keyframes animateToRight{from{transform:translateX(-5%)}to{transform:translateX(0)}}@keyframes animateToLeft{from{transform:translateX(100%)}to{transform:translateX(0)}}@-webkit-keyframes animateToLeft{from{transform:translateX(100%)}to{transform:translateX(0)}}@keyframes animateDown{from{transform:translateY(-100px)}to{transform:translateY(0)}}@-webkit-keyframes animateDown{from{transform:translateY(-100px)}to{transform:translateY(0)}}.fade{animation:fade 2.5s ease;}@keyframes fade{from{opacity:0}to{opacity:100%}}.description{font-family:'Georgia';color:gray;margin-right:12px;}.styled-font{font-family:'Georgia';color:gray;}#featured-in{margin-top:28px;}.articles{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,max-content));grid-column-gap:40px;justify-content:center;max-width:900px;margin-inline:auto;}.article{display:flex;flex-direction:column;border-radius:4px;background-color:white;padding:12px;text-align:center;width:100%;margin-top:28px;min-height:450px;border:2px solid transparent;}.article>:nth-child(2){padding:24px;}.article:hover{border:2px solid gold;}.footer{margin-top:50px;}.flexbox{display:flex;}.company-picture{display:flex;flex-direction:column;align-items:center;}.project-year{margin:0;}.other-works-section{flex-basis:100%;}::-webkit-scrollbar{display:none;}.card{position:relative;border:1px solid lightgray;overflow:hidden;-ms-overflow-style:none;scrollbar-width:none;border-radius:2px;max-width:600px;display:flex;flex-direction:column;transition:height .1s ease;}.card-info{color:gray;margin:16px;overflow:hidden;}.card-image{width:100%;height:auto;}.card.expanded{height:100%;transition:height .1s ease;}.read-more-btn{position:absolute;bottom:1rem;left:50%;z-index:10;transform:translateX(-50%);border:none;background-color:none;font-family:'Times New Roman';color:blue;font-size:16px;cursor:pointer;}
